get moar button works

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   <script src= "gifList.js"></script>
   <script src= "mainView.js"></script>
+  <script src= "searchView.js"></script>
 
 
   <script src='app.js'></script>
 </head>
 <body>
 <head>
-  
+  <h1>The Gif Poster</h1>
 </head>
 <section>
-  <h1>The Gif Poster</h1>
+  <input type="text" id = "search"/>
+  <button>Get Moar!</button>
 </section>
 <section id="main">
   
