--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Gif Poster</title>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link href='//fonts.googleapis.com/css?family=Eater' rel='stylesheet'>
   <script src= "gifList.js"></script>
   <script src= "mainView.js"></script>
   <script src= "searchView.js"></script>
@@ -14,7 +15,7 @@
 <head>
   <h1>The Gif Poster</h1>
 </head>
-<section>
+<section id = "searchSection">
   <input type="text" id = "search"/>
   <button>Get Moar!</button>
 </section>
